# hermes

./: .env.example  .gitignore  README.md  hermes.example.yaml  pyproject.toml
hermes/: __init__.py  cli.py  config.py
hermes/pipeline/: __init__.py  classify.py  cycle.py  extract.py  fetch.py  generate.py  send.py  validate.py
hermes/providers/: __init__.py  anthropic_ai.py  base.py  maton.py  minimax_ai.py  openai_ai.py
hermes/scheduler/: cron.py  launchd.py
hermes/wizard/: __init__.py  brand_voice.py  setup.py  templates.py
skill/: install.sh  skill.md
supabase/: seed.py
supabase/migrations/: 001_hermes_tables.sql  002_hermes_rls.sql  003_hermes_functions.sql  004_hermes_blacklist.sql
templates/: _example_billing.md  _example_inquiry.md
