[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-email"
version = "0.1.0"
description = "AI-powered email automation pipeline — fetch, classify, draft, validate, send."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Blazefit", email = "hello@blazefit.dev"},
]
keywords = ["email", "automation", "ai", "pipeline", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "anthropic>=0.18",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
google = [
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]
openai = [
    "openai>=1.0",
]
minimax = []
all = [
    "hermes-email[google,openai]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
hermes = "hermes.cli:main"

[project.urls]
Homepage = "https://github.com/blazefit/hermes"
Repository = "https://github.com/blazefit/hermes"
Issues = "https://github.com/blazefit/hermes/issues"

[tool.setuptools.packages.find]
include = ["hermes*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
